# service-agent-platform

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/agent/: agent.py  dispatcher.py  prompts.py  registry.py
app/monitoring/: logger.py
app/rag/: generator.py  hybrid.py  keyword_index.py  loader.py  search.py  vector_index.py
app/session/: extractor.py  manager.py  models.py  session.py
app/tools/: availability.py  booking.py  search.py
data/restaurant/: knowledge_base.md
evaluations/: run_evaluation.py  test_cases.json
scripts/: test_search.py
tests/: test_availability.py  test_booking.py  test_dispatcher.py  test_extractor.py  test_search.py  test_session.py
